runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__CacheStats-75220100-75220101.s3.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
top-level:
  GET   4 Block  4 BlockHeader  2 BlockHeight  4 BlockInfo  2 BlockMisc  2 ChunkExtra  2 Chunks  4 EpochInfo  2 IncomingReceipts  678 State  
  DB GET              704 requests for a total of  3288866 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ         37 requests for a total of     1573 B
  STORAGE WRITE        35 requests for a total of     1557 B
  TRIE NODES (guest) 1058 /  15 / 231  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)         991 / 443  (shard-cache/DB)
  SHARD CACHE         59.88% hit rate,  60.38% if removing 14 too large nodes from total
  CHUNK CACHE         81.13% hit rate,  82.02% if removing 14 too large nodes from total


