runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__ChunkCacheStats-75220100-75220101.s1.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
apply_transactions shard_id=1 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
  GET   4 State  
  DB GET                4 requests for a total of      283 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ          0 requests for a total of        0 B
  STORAGE WRITE         0 requests for a total of        0 B
  TRIE NODES (guest)    0 /   0 /   0  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)           9 /   4  (shard-cache/DB)
  SHARD CACHE       69.23% hit rate
  CHUNK CACHE not accessed

apply_transactions shard_id=1 block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
top-level:
  DB GET                0 requests for a total of        0 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ          0 requests for a total of        0 B
  STORAGE WRITE         0 requests for a total of        0 B
  TRIE NODES (guest)    0 /   0 /   0  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)          13 /   0  (shard-cache/DB)
  SHARD CACHE      100.00% hit rate
  CHUNK CACHE not accessed


