runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__ChunkCacheStats-75220100-75220101.s3.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
apply_transactions shard_id=3 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
  GET   371 State  
  DB GET              371 requests for a total of  1805602 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ         21 requests for a total of      943 B
  STORAGE WRITE        20 requests for a total of      935 B
  TRIE NODES (guest)  542 /   2 / 126  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)         482 / 245  (shard-cache/DB)
  SHARD CACHE         56.61% hit rate,  57.14% if removing 8 too large nodes from total
  CHUNK CACHE         80.90% hit rate,  81.87% if removing 8 too large nodes from total

apply_transactions shard_id=3 block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
  GET   303 State  
  DB GET              303 requests for a total of  1325917 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ         16 requests for a total of      630 B
  STORAGE WRITE        15 requests for a total of      622 B
  TRIE NODES (guest)  516 /  13 / 105  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)         509 / 198  (shard-cache/DB)
  SHARD CACHE         63.27% hit rate,  63.74% if removing 6 too large nodes from total
  CHUNK CACHE         81.39% hit rate,  82.17% if removing 6 too large nodes from total

top-level:
  GET   4 Block  4 BlockHeader  2 BlockHeight  4 BlockInfo  2 BlockMisc  2 ChunkExtra  2 Chunks  4 EpochInfo  2 IncomingReceipts  4 State  
  DB GET               30 requests for a total of   157347 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ          0 requests for a total of        0 B
  STORAGE WRITE         0 requests for a total of        0 B
  TRIE NODES (guest)    0 /   0 /   0  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)           0 /   0  (shard-cache/DB)
  SHARD CACHE not accessed
  CHUNK CACHE not accessed


