runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__ChunkCacheStats-75220100.s0.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
apply_transactions shard_id=0 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
  GET   1 ChunkExtra  287 State  
  DB GET              288 requests for a total of  1668345 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ          9 requests for a total of      800 B
  STORAGE WRITE        10 requests for a total of      881 B
  TRIE NODES (guest)  400 /   2 /  93  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)         289 / 194  (shard-cache/DB)
  SHARD CACHE         50.35% hit rate,  50.61% if removing 3 too large nodes from total
  CHUNK CACHE         80.81% hit rate,  81.30% if removing 3 too large nodes from total

top-level:
  GET   2 Block  2 BlockHeader  1 BlockHeight  3 BlockInfo  2 BlockMisc  1 Chunks  4 EpochInfo  1 IncomingReceipts  
  DB GET               16 requests for a total of   116484 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ          0 requests for a total of        0 B
  STORAGE WRITE         0 requests for a total of        0 B
  TRIE NODES (guest)    0 /   0 /   0  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)           0 /   0  (shard-cache/DB)
  SHARD CACHE not accessed
  CHUNK CACHE not accessed


