runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__ChunkCacheStats-75220100.s3.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
apply_transactions shard_id=3 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
  GET   1 ChunkExtra  371 State  
  DB GET              372 requests for a total of  1805703 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ         21 requests for a total of      943 B
  STORAGE WRITE        20 requests for a total of      935 B
  TRIE NODES (guest)  542 /   2 / 126  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)         482 / 245  (shard-cache/DB)
  SHARD CACHE         56.61% hit rate,  57.14% if removing 8 too large nodes from total
  CHUNK CACHE         80.90% hit rate,  81.87% if removing 8 too large nodes from total

top-level:
  GET   2 Block  2 BlockHeader  1 BlockHeight  3 BlockInfo  2 BlockMisc  1 Chunks  4 EpochInfo  1 IncomingReceipts  
  DB GET               16 requests for a total of   119747 B
  DB SET                0 requests for a total of        0 B
  STORAGE READ          0 requests for a total of        0 B
  STORAGE WRITE         0 requests for a total of        0 B
  TRIE NODES (guest)    0 /   0 /   0  (chunk-cache/shard-cache/DB)
  TRIE NODES (host)           0 /   0  (shard-cache/DB)
  SHARD CACHE not accessed
  CHUNK CACHE not accessed


